# vmath

./: CMakeLists.txt
inc/vmath/core/: vector.hpp
